Fix missing border width/type on find/replace

--- a/stylesheets/base.less
+++ b/stylesheets/base.less
@@ -33,11 +33,11 @@
 
 .editor .search-results .marker .region {
   background-color: transparent;
-  border: @syntax-result-marker-color;
+  border: 1px solid @syntax-result-marker-color;
 }
 
 .editor .search-results .marker.current-result .region {
-  border: @syntax-result-marker-color-selected;
+  border: 1px solid @syntax-result-marker-color-selected;
 }
 
 .editor.is-focused .cursor {
